--- a/RestaurantApp/style.css
+++ b/RestaurantApp/style.css
@@ -183,9 +183,17 @@ h4
 
 }
 
+#delete
+{
+    margin:0 0.5rem;
+}
+
 #total
 {
     text-align: center;
+    position: absolute;
+    bottom: 8%;
+    right: 50%;
 }
 
 #bill
@@ -194,7 +202,7 @@ h4
     font-weight: bold;
     position: absolute;
     bottom:0;
-    right:0;
+    right:1rem;
 }
 
 
